fixed bug with wrapping input fields with red box

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,7 +20,7 @@
 }
 
 .form-errors {
-  border: 1px solid red;
+  border: 3px solid red;
   display: inline-block;
 }
 
